# quant-core-engine

./: .gitignore  CMakeLists.txt  main.cpp  overview.md  trading_engine.md
.cache/clangd/index/: dummy_strategy.cpp.353DEB273725F449.idx  dummy_strategy.cpp.FD47FD987418FFB4.idx  dummy_strategy.hpp.2ABA6AA2064AA4EE.idx  dummy_strategy.hpp.7A34524B7A0E2C7A.idx  event.hpp.2A4470899C5B7184.idx  event.hpp.31CE675118C59E96.idx  event_bus.cpp.852789537E149441.idx  event_bus.cpp.BFACC5F45C897A91.idx  event_bus.hpp.0C4A50F5001897F9.idx  event_bus.hpp.6D966B6A75C6C280.idx  event_bus_test.cpp.FFDD78CCA0D7FD53.idx  event_loop_thread.cpp.9C9AEA30094482D3.idx  event_loop_thread.cpp.BA46745AA0AA5ABF.idx  event_loop_thread.hpp.162CDAC5330BCED6.idx  event_loop_thread.hpp.4E91A2307CB6E5D2.idx  event_types.hpp.4344B4D2ACB46861.idx  event_types.hpp.B532B14EAA695662.idx  execution_engine.cpp.378C4CFBB48212CF.idx  execution_engine.cpp.70B7999755AE8248.idx  execution_engine.hpp.2248B40F10C0DED5.idx  execution_engine.hpp.9A1BEA2EE3AAE137.idx  execution_report_event.hpp.65CB60A52199A53E.idx  execution_report_event.hpp.E9AC38EE2BC50B03.idx  i_execution_engine.hpp.2EA562871FDCBA2D.idx  i_time_provider.hpp.EF9E2153C27BECA6.idx  live_time_provider.cpp.E64CCA6A448E2F78.idx  live_time_provider.hpp.B51E8632CC8358EF.idx  main.cpp.17B306614D4AE035.idx  market_data_gateway.cpp.2D72301DC2B01FD5.idx  market_data_gateway.hpp.2BA6678C3B7133ED.idx  market_data_thread.cpp.7E879D8A021EE3EF.idx  market_data_thread.hpp.C01B40560D41EF42.idx  mock_execution_engine.cpp.24E4ABC6FE2F33A6.idx  mock_execution_engine.hpp.209D09FCED530525.idx  order.hpp.C608A7D2B6C16A64.idx  order.hpp.DAA792EA48BE1A6B.idx  order_event.hpp.E1297A6A7D33B3BA.idx  order_event.hpp.F79E33867F27722C.idx  order_routing_thread.cpp.24EA6F910F923A7D.idx  order_routing_thread.hpp.B2D9D187A7A3FA16.idx  (+23 more)
.cursor/: rules.md
build_test/: CMakeCache.txt
core/: CMakeLists.txt
core/app/: CMakeLists.txt
core/app/include/quant/concurrent/: order_id_generator.hpp
core/app/include/quant/domain/: order.hpp  order_status.hpp  position.hpp  risk_limits.hpp
core/app/include/quant/events/: event.hpp  event_types.hpp  execution_report_event.hpp  order_event.hpp  order_update_event.hpp  position_update_event.hpp  risk_violation_event.hpp
core/app/include/quant/execution/: execution_engine.hpp  i_execution_engine.hpp  mock_execution_engine.hpp
core/app/include/quant/gateway/: market_data_gateway.hpp
core/app/include/quant/network/: ipc_server.hpp  market_data_thread.hpp  order_routing_thread.hpp
core/app/include/quant/risk/: i_reconciler.hpp  order_tracker.hpp  position_engine.hpp  risk_engine.hpp
core/app/include/quant/time/: i_time_provider.hpp  live_time_provider.hpp  simulation_time_provider.hpp  time_utils.hpp
core/app/src/event/: event_bus.cpp
core/app/src/execution/: execution_engine.cpp  mock_execution_engine.cpp
core/app/src/gateway/: market_data_gateway.cpp
core/app/src/network/: ipc_server.cpp  market_data_thread.cpp  order_routing_thread.cpp
core/app/src/risk/: order_tracker.cpp  position_engine.cpp  risk_engine.cpp
core/app/src/statergy/: dummy_strategy.cpp
core/app/src/time/: live_time_provider.cpp  simulation_time_provider.cpp
core/engine/: CMakeLists.txt
core/engine/include/quant/engine/: trading_engine.hpp
core/engine/src/: trading_engine.cpp
core/include/quant/concurrent/: event_loop_thread.hpp  thread_safe_queue.hpp
core/include/quant/domain/: order.hpp
core/include/quant/eventbus/: event_bus.hpp
core/include/quant/events/: event.hpp  event_types.hpp
core/include/quant/execution/: execution_engine.hpp
core/include/quant/strategy/: dummy_strategy.hpp
core/src/: event_bus.cpp  event_loop_thread.cpp  risk_engine.cpp
docs/: architecture.md  development_rules.md  llm_guard_prompt.md  roadmap.md  walkthrough.md
docs/task_overviews/: 01_phase2_python_feeder.md  02_phase3_position_engine.md  03_phase3_price_fix.md  04_phase3_order_state_machine.md  05_phase3_order_id_generator.md  06_phase3_reconciliation.md  07_phase3_5_risk_hardening.md  08_phase4_network_threads.md  09_phase4_2_ipc_server.md
tests/: CMakeLists.txt  event_bus_test.cpp  pipeline_integration_test.cpp  thread_safe_queue_test.cpp  trading_engine_test.cpp
tools/backtest_feeder/: dummy_data.csv  dummy_data_extended.csv  feeder.py
